kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: application-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - application-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: application-pool
        port:
          number: 80
